--- a/documentation/citations.bib
+++ b/documentation/citations.bib
@@ -1,17 +1,40 @@
 @article{Maxwell1865,
-   abstract = {(1) The most obvious mechanical phenomenon in electrical and magnetical experiments is the mutual action by which bodies in certain states set each other in motion while still at a sensible distance from each other. The first step, therefore, in reducing these phenomena into scientific form, is to ascertain the magnitude and direction of the force acting between the bodies, and when it is found that this force depends in a certain way upon the relative position of the bodies and on their electric or magnetic condition, it seems at first sight natural to explain the facts by assuming the existence of something either at rest or in motion in each body, constituting its electric or magnetic state, and capable of acting at a distance according to mathematical laws. In this way mathematical theories of statical electricity, of magnetism, of the mechanical action between conductors carrying currents, and of the induction of currents have been formed. In these theories the force acting between the two bodies is treated with reference only to the condition of the bodies and their relative position, and without any express consideration of the surrounding medium.},
-   author = {James Clerk Maxwell},
-   doi = {10.1098/RSTL.1865.0008},
-   issn = {0261-0523},
-   journal = {Philosophical Transactions of the Royal Society of London},
-   month = {12},
-   pages = {459-512},
-   publisher = {
-The Royal Society
-London
-},
-   title = {VIII. A dynamical theory of the electromagnetic field},
-   volume = {155},
-   url = {https://royalsocietypublishing.org/doi/10.1098/rstl.1865.0008},
-   year = {1865},
+  abstract  = {(1) The most obvious mechanical phenomenon in electrical and magnetical experiments is the mutual action},
+  author    = {James Clerk Maxwell},
+  doi       = {10.1098/RSTL.1865.0008},
+  issn      = {0261-0523},
+  journal   = {Philosophical Transactions of the Royal Society of London},
+  month     = {12},
+  pages     = {459-512},
+  publisher = {
+               The Royal Society
+               London
+               },
+  title     = {VIII. A dynamical theory of the electromagnetic field},
+  volume    = {155},
+  url       = {https://royalsocietypublishing.org/doi/10.1098/rstl.1865.0008},
+  year      = {1865}
+}
+@article{SpotifyDataset,
+  author       = {Yamac Eren Ay},
+  title        = {Spotify Dataset 1921-2020, 600k+ Tracks},
+  howpublished = {Kaggle},
+  journal = {Dataset},
+  url          = {https://www.kaggle.com/yamaerenay/spotify-dataset-19212020-600k-tracks},
+  year         = {2021}
+}
+@article{PredictingPopularityonSpotify,
+  author  = {Zach Quinn},
+  title   = {Predicting Popularity on Spotify — When Data Needs Culture More than Culture Needs Data},
+  journal = {Towards Data Science},
+  url     = {https://towardsdatascience.com/predicting-popularity-on-spotify-when-data-needs-culture-more-than-culture-needs-data-2ed3661f75f1},
+  year    = {2021}
+}
+
+@article{SpotifyAnalysis,
+  author = {Virginia Ochi},
+  title  = {Spotify Danceability and Popularity Analysis using SAP},
+  journal = {Towards Data Science},
+  url    = {https://arxiv.org/abs/2108.02370},
+  year   = {https://arxiv.org/abs/2108.02370}
 }
